syntax = "proto3";

package api.account.v1;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/bighuangbee/basic-platform/api/account/v1;v1";
option java_multiple_files = true;
option java_package = "api.account.v1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info : {
		title : "账号服务",
		version : "1",
		description : "账号服务",
		contact : {name : "bigbuangbee" email : "bigbuangbee@qq.com"}
	}
	host : "",
	security_definitions: {
		security: {
		key: "ApiKeyAuth";
		value: {
			type: TYPE_API_KEY;
			in: IN_HEADER;
			name: "token";
		}
		}
	},
	responses: {
		key: "403";
		value: {
		description: "Returned when the user does not have permission to access the resource.";
		}
	}
};

service Account {
	rpc Test (LoginReq) returns (LoginReply){
		option (google.api.http) = {
			get : "/api/v1.0/account/test",
			opLog:"1,账户-测试一下",
		};
	};
	rpc Login (LoginReq) returns (LoginReply){
		option (google.api.http) = {
			post : "/api/v1.0/account/login",
			body : "*",
			opLog:"1,账户-用户登陆",
		  };
	};

}

message LoginReq{
	string username = 1;
}

message LoginReply{
	uint64 userId = 1;
}

